syntax = "proto3";

option java_package = "enchantedtowers.common.utils.proto.common";
option java_multiple_files = true;

package common;

message PlayerData {
  int32 playerId = 1;
  string username = 2;
};
