syntax = "proto3";

option java_package = "enchantedtowers.common.utils.proto.responses";
option java_multiple_files = true;

package response_models;

// common
import "common/vector2.proto";
// responses
import "responses/spell-description-response.proto";

message CurrentCanvasStateResponse {
  message CurrentSpellState {
    int32 colorId = 1;
    repeated common.Vector2 points = 2;
  }

  CurrentSpellState currentSpellState = 1;
  repeated response_models.SpellDescriptionResponse spellDescriptions = 2;
};
